--- a/app/globals.css
+++ b/app/globals.css
@@ -2,3 +2,9 @@
 @plugin "daisyui" {
   themes: light --default, dark --prefersdark, winter;
 }
+
+@layer base {
+  h1 {
+    @apply font-extrabold text-2xl;
+  }
+}
